margin adjustments, fixed frame positionning on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,12 @@ html {
   scroll-behavior: smooth;
   scrollbar-width: thin;
   scrollbar-color: #F2E8E6 #191718 ;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 0px;
+} */
+
+html, body {
+  overflow: auto;
 }
